5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1650_2730.log
== TEST (2019-04-15 11:31:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero: "))
y=float(input("numero"))
if(x>=a),(y>=0):
	print("Superiores")
else:
	print("Inferiores")
-- ERROR:
File "XXXX", line 4
    if(x>=a),(y>=0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 11:32:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero: "))
y=float(input("numero"))
if(y>=0):
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 11:32:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero: "))
y=float(input("numero: "))
if(y>=0):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.146318
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
